Fix alignment

--- a/less/site.less
+++ b/less/site.less
@@ -5162,6 +5162,9 @@ footer {
 
 .skill-level {
   float:right;
+  i {
+    vertical-align: -webkit-baseline-middle;
+  }
 }
 
 .padless-list {
